# folium-layerscontrol-minimap

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  pyproject.toml  repo_helper.yml  tox.ini
.github/workflows/: flake8.yml  mypy.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
folium_layercontrols/: __init__.py
folium_layerscontrol_minimap/: L.Control.Layers.Minimap.Toggle.js  L.Control.Layers.Toggle.js  __init__.py  grouped.py  leaflet.groupedlayercontrol.toggle.js  toggle.py
folium_layerscontrol_minimap/minimap/: __init__.py  toggle.py
