[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "folium-layercontrols"
version = "0.1.0b1"
description = "Folium addon for custom layer controls"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/folium-layercontrols"
"Issue Tracker" = "https://github.com/domdfcoding/folium-layercontrols/issues"
"Source Code" = "https://github.com/domdfcoding/folium-layercontrols"

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "BSD-2-Clause"
package = "folium_layercontrols"
additional-files = [ "include folium_layercontrols/*.js", "include folium_layercontrols/*.css",]

[tool.importcheck]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
